--- a/src/List/List.css
+++ b/src/List/List.css
@@ -1,7 +1,7 @@
 .List {
     margin: 10px;
-    width: 272px;
-    height: 614px;
+    width: 300px;
+    height: 100%;
     background: #DFE3E6;
     border-radius: 3px;
 }
